// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateReportHTML developer baseline (D-13) > matches snapshot for empty result (two-arg call, no audience param) 1`] = `
"
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <title>Accessibility Report - https://example.com</title>
        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
        <style>
            @page {
                margin: 0;
            }
            body {
                font-family: 'Inter', sans-serif;
                background-color: #ffffff;
                color: #0f172a;
                margin: 0;
                padding: 40px;
                -webkit-print-color-adjust: exact;
            }
            .header {
                display: flex;
                justify-content: space-between;
                align-items: center;
                border-bottom: 2px solid #f1f5f9;
                padding-bottom: 2rem;
                margin-bottom: 3rem;
            }
            .brand {
                font-size: 1.5rem;
                font-weight: 700;
                color: #0f172a;
            }
            .brand span {
                color: #0ea5e9;
            }
            .meta {
                text-align: right;
                color: #64748b;
                font-size: 0.875rem;
            }
            .summary-grid {
                display: grid;
                grid-template-columns: repeat(5, 1fr);
                gap: 1.5rem;
                margin-bottom: 3rem;
            }
            .card {
                background: #f8fafc;
                border: 1px solid #e2e8f0;
                border-radius: 12px;
                padding: 1.5rem;
            }
            .score-card {
                background: #f0f9ff;
                border-color: #bae6fd;
            }
            .metric-label {
                font-size: 0.875rem;
                color: #64748b;
                margin-bottom: 0.5rem;
                font-weight: 500;
                min-height: 2.5rem;
            }
            .metric-value {
                font-size: 2rem;
                font-weight: 700;
                color: #0f172a;
            }
            .section-title {
                font-size: 1.25rem;
                font-weight: 700;
                margin-bottom: 1.5rem;
                color: #0f172a;
            }
            .violation-card {
                background: white;
                border: 1px solid #e2e8f0;
                border-radius: 8px;
                padding: 1.5rem;
                margin-bottom: 1rem;
                page-break-inside: avoid;
            }
            .violation-header {
                display: flex;
                justify-content: space-between;
                align-items: flex-start;
                margin-bottom: 1rem;
            }
            .violation-title {
                font-weight: 600;
                font-size: 1.125rem;
                color: #0f172a;
            }
            .badge {
                display: inline-block;
                padding: 0.25rem 0.75rem;
                border-radius: 9999px;
                font-size: 0.75rem;
                font-weight: 600;
                text-transform: uppercase;
            }
            .badge-critical { background: #fef2f2; color: #dc2626; border: 1px solid #fecaca; }
            .badge-high { background: #fffbeb; color: #d97706; border: 1px solid #fde68a; }
            .badge-medium { background: #fefce8; color: #ca8a04; border: 1px solid #fef08a; }
            .badge-low { background: #f8fafc; color: #475569; border: 1px solid #e2e8f0; }
            .badge-wad { background: #eff6ff; color: #1d4ed8; border: 1px solid #bfdbfe; margin-left: 0.5rem; }
            .badge-eaa { background: #faf5ff; color: #7c3aed; border: 1px solid #ddd6fe; margin-left: 0.5rem; }
            .legal-summary {
                background: linear-gradient(135deg, #eff6ff 0%, #faf5ff 100%);
                border: 1px solid #c7d2fe;
                border-radius: 12px;
                padding: 1.5rem;
                margin-bottom: 2rem;
            }
            .legal-summary-title {
                font-size: 1rem;
                font-weight: 600;
                color: #3730a3;
                margin-bottom: 1rem;
            }
            .legal-grid {
                display: grid;
                grid-template-columns: repeat(var(--legal-cols, 1), 1fr);
                gap: 1rem;
            }
            .legal-stat {
                text-align: center;
            }
            .legal-stat-value {
                font-size: 1.5rem;
                font-weight: 700;
            }
            .legal-stat-label {
                font-size: 0.75rem;
                color: #64748b;
            }

            .violation-meta {
                font-size: 0.875rem;
                color: #64748b;
                margin-bottom: 1rem;
                padding-bottom: 1rem;
                border-bottom: 1px solid #f1f5f9;
            }
            .remediation-box {
                background: #f0fdf4;
                border: 1px solid #bbf7d0;
                border-radius: 6px;
                padding: 1rem;
                margin-top: 1rem;
            }
            .remediation-title {
                color: #166534;
                font-weight: 600;
                font-size: 0.875rem;
                margin-bottom: 0.5rem;
            }
            .remediation-text {
                color: #15803d;
                font-size: 0.875rem;
            }
            footer {
                margin-top: 4rem;
                text-align: center;
                color: #94a3b8;
                font-size: 0.75rem;
                border-top: 1px solid #f1f5f9;
                padding-top: 2rem;
            }
        </style>
    </head>
    <body>
        <div class="header">
            <div class="brand">@HolmDigital/<span>engine</span></div>
            <div class="meta">
                <div>Scan Target: https://example.com</div>
                <div>Generated: __DATE__</div>
                <div style="margin-top: 0.25rem; font-size: 0.75rem; font-weight: 600; color: #1d4ed8;">Public sector (WAD)</div>
                <div style="margin-top: 0.5rem;"><img src="https://img.shields.io/badge/HolmDigital_Engine-100%25-00703C?style=flat-square" alt="Accessibility Status: 100% Compliant" /></div>
            </div>
        </div>

        <div class="summary-grid">
            <div class="card score-card">
                <div class="metric-label" style="color: #0369a1;">Overall Score</div>
                <div class="metric-value" style="color: #16a34a;">100</div>
            </div>
            <div class="card">
                <div class="metric-label">Critical Issues</div>
                <div class="metric-value" style="color: #dc2626;">0</div>
            </div>
            <div class="card">
                <div class="metric-label">High Issues</div>
                <div class="metric-value" style="color: #d97706;">0</div>
            </div>
            <div class="card">
                <div class="metric-label">Total Issues</div>
                <div class="metric-value">0</div>
            </div>
            <div class="card">
                <div class="metric-label">HTML Errors</div>
                <div class="metric-value" style="color: #16a34a;">0</div>
            </div>
        </div>

        

        <div class="section-title">Detailed Violations</div>

        

        <footer>
            Generated by @holmdigital/engine v__VERSION__ • Standards: WCAG 2.1 AA, EN 301 549, DOS-lagen
        </footer>
    </body>
    </html>
    "
`;

exports[`generateReportHTML developer baseline (D-13) > matches snapshot for result with one report (two-arg call, no audience param) 1`] = `
"
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <title>Accessibility Report - https://example.com</title>
        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
        <style>
            @page {
                margin: 0;
            }
            body {
                font-family: 'Inter', sans-serif;
                background-color: #ffffff;
                color: #0f172a;
                margin: 0;
                padding: 40px;
                -webkit-print-color-adjust: exact;
            }
            .header {
                display: flex;
                justify-content: space-between;
                align-items: center;
                border-bottom: 2px solid #f1f5f9;
                padding-bottom: 2rem;
                margin-bottom: 3rem;
            }
            .brand {
                font-size: 1.5rem;
                font-weight: 700;
                color: #0f172a;
            }
            .brand span {
                color: #0ea5e9;
            }
            .meta {
                text-align: right;
                color: #64748b;
                font-size: 0.875rem;
            }
            .summary-grid {
                display: grid;
                grid-template-columns: repeat(5, 1fr);
                gap: 1.5rem;
                margin-bottom: 3rem;
            }
            .card {
                background: #f8fafc;
                border: 1px solid #e2e8f0;
                border-radius: 12px;
                padding: 1.5rem;
            }
            .score-card {
                background: #f0f9ff;
                border-color: #bae6fd;
            }
            .metric-label {
                font-size: 0.875rem;
                color: #64748b;
                margin-bottom: 0.5rem;
                font-weight: 500;
                min-height: 2.5rem;
            }
            .metric-value {
                font-size: 2rem;
                font-weight: 700;
                color: #0f172a;
            }
            .section-title {
                font-size: 1.25rem;
                font-weight: 700;
                margin-bottom: 1.5rem;
                color: #0f172a;
            }
            .violation-card {
                background: white;
                border: 1px solid #e2e8f0;
                border-radius: 8px;
                padding: 1.5rem;
                margin-bottom: 1rem;
                page-break-inside: avoid;
            }
            .violation-header {
                display: flex;
                justify-content: space-between;
                align-items: flex-start;
                margin-bottom: 1rem;
            }
            .violation-title {
                font-weight: 600;
                font-size: 1.125rem;
                color: #0f172a;
            }
            .badge {
                display: inline-block;
                padding: 0.25rem 0.75rem;
                border-radius: 9999px;
                font-size: 0.75rem;
                font-weight: 600;
                text-transform: uppercase;
            }
            .badge-critical { background: #fef2f2; color: #dc2626; border: 1px solid #fecaca; }
            .badge-high { background: #fffbeb; color: #d97706; border: 1px solid #fde68a; }
            .badge-medium { background: #fefce8; color: #ca8a04; border: 1px solid #fef08a; }
            .badge-low { background: #f8fafc; color: #475569; border: 1px solid #e2e8f0; }
            .badge-wad { background: #eff6ff; color: #1d4ed8; border: 1px solid #bfdbfe; margin-left: 0.5rem; }
            .badge-eaa { background: #faf5ff; color: #7c3aed; border: 1px solid #ddd6fe; margin-left: 0.5rem; }
            .legal-summary {
                background: linear-gradient(135deg, #eff6ff 0%, #faf5ff 100%);
                border: 1px solid #c7d2fe;
                border-radius: 12px;
                padding: 1.5rem;
                margin-bottom: 2rem;
            }
            .legal-summary-title {
                font-size: 1rem;
                font-weight: 600;
                color: #3730a3;
                margin-bottom: 1rem;
            }
            .legal-grid {
                display: grid;
                grid-template-columns: repeat(var(--legal-cols, 1), 1fr);
                gap: 1rem;
            }
            .legal-stat {
                text-align: center;
            }
            .legal-stat-value {
                font-size: 1.5rem;
                font-weight: 700;
            }
            .legal-stat-label {
                font-size: 0.75rem;
                color: #64748b;
            }

            .violation-meta {
                font-size: 0.875rem;
                color: #64748b;
                margin-bottom: 1rem;
                padding-bottom: 1rem;
                border-bottom: 1px solid #f1f5f9;
            }
            .remediation-box {
                background: #f0fdf4;
                border: 1px solid #bbf7d0;
                border-radius: 6px;
                padding: 1rem;
                margin-top: 1rem;
            }
            .remediation-title {
                color: #166534;
                font-weight: 600;
                font-size: 0.875rem;
                margin-bottom: 0.5rem;
            }
            .remediation-text {
                color: #15803d;
                font-size: 0.875rem;
            }
            footer {
                margin-top: 4rem;
                text-align: center;
                color: #94a3b8;
                font-size: 0.75rem;
                border-top: 1px solid #f1f5f9;
                padding-top: 2rem;
            }
        </style>
    </head>
    <body>
        <div class="header">
            <div class="brand">@HolmDigital/<span>engine</span></div>
            <div class="meta">
                <div>Scan Target: https://example.com</div>
                <div>Generated: __DATE__</div>
                <div style="margin-top: 0.25rem; font-size: 0.75rem; font-weight: 600; color: #1d4ed8;">Public sector (WAD)</div>
                
            </div>
        </div>

        <div class="summary-grid">
            <div class="card score-card">
                <div class="metric-label" style="color: #0369a1;">Overall Score</div>
                <div class="metric-value" style="color: #dc2626;">0</div>
            </div>
            <div class="card">
                <div class="metric-label">Critical Issues</div>
                <div class="metric-value" style="color: #dc2626;">1</div>
            </div>
            <div class="card">
                <div class="metric-label">High Issues</div>
                <div class="metric-value" style="color: #d97706;">0</div>
            </div>
            <div class="card">
                <div class="metric-label">Total Issues</div>
                <div class="metric-value">1</div>
            </div>
            <div class="card">
                <div class="metric-label">HTML Errors</div>
                <div class="metric-value" style="color: #16a34a;">0</div>
            </div>
        </div>

        

        <div class="section-title">Detailed Violations</div>

        
            <div class="violation-card">
                <div class="violation-header">
                    <div class="violation-title">all-img-alt</div>
                    <div>
                        <span class="badge badge-critical">critical</span>
                        
                        
                    </div>
                </div>
                <div class="violation-meta">
                    WCAG 1.1.1 • EN 301 549 9.1.1.1
                    • Lag 2018:1937 §7
                    
                </div>
                <div style="font-size: 0.95rem; color: #334155; line-height: 1.5;">
                    undefined
                    
                </div>
                
                <div class="remediation-box">
                    <div class="remediation-title">💡 Prescriptive Fix</div>
                    <div class="remediation-text">Use <strong>Image</strong>: Fix alt</div>
                </div>
                
            </div>
            

        <footer>
            Generated by @holmdigital/engine v__VERSION__ • Standards: WCAG 2.1 AA, EN 301 549, DOS-lagen
        </footer>
    </body>
    </html>
    "
`;
